--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ script:
 - mvn test
 script: "mvn cobertura:cobertura"
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - bash <(curl -s https://codecov.io/bash) -t e4ea82dc-865d-415d-a37f-a5877472c4bc
