--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ jdk:
 # obviously this only works for maven builds right now...
 #install:
 #- mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
-#script:
-#- mvn test
+script:
+- mvn test
 script: "mvn cobertura:cobertura"
 after_success:
   - bash <(curl -s https://codecov.io/bash)
